--- a/app/views/audited_timeline/_diff.html.erb
+++ b/app/views/audited_timeline/_diff.html.erb
@@ -11,12 +11,9 @@
     <tbody>
       <% audit.human_audited_changes.each_pair do |field, value| %>
         <% next if [value].flatten.join.blank? %>
-
         <tr>
-          <td>
-            <%= audit.auditable_class.human_attribute_name field %>
-          </td>
-          <%= render "audits/diff_#{audit.action}", field: field, value: value %>
+          <td><%= audit.auditable_class.human_attribute_name field %></td>
+          <%= render "audited_timeline/diff_#{audit.action}", field: field, value: value %>
         </tr>
       <% end %>
     </tbody>
