Move some more localisations into the gem

--- a/app/views/audited_timeline/_list.html.erb
+++ b/app/views/audited_timeline/_list.html.erb
@@ -11,7 +11,7 @@
           <%= audited_timeline_action_icon audit %>
         </span>
         <span class="audited-timeline-date">
-          <%= l audit.created_at, format: :very_short %>
+          <%= l audit.created_at, format: :audited_timeline %>
         </span>
       </div>
       <div class="audited-timeline-body">
